@@ -78,7 +78,7 @@ public class ClientDefaults
 
    public static final boolean update_ial     = true;
 
-   public static final String  version_string = "02.18.06 (alpha)";
+   public static final String  version_string = "02.23.06 (alpha)";
 
    static
    {
